# Self-Forcing-fork

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  demo.py  inference.py  main.py  plot_figure4.ipynb  plt_fig4.ipynb  pyproject.toml  requirements.txt  run_extraction.py  run_extraction_figure4.py
.ipynb_checkpoints/: plot_figure4-checkpoint.ipynb  plt_fig4-checkpoint.ipynb
docs/: attention_extraction.md  attention_hook_analysis.md  attention_visualization.md  dmd_vs_sid_comparison.md  model_loading_analysis.md  plt_fig4_notebook.md  run_extraction_figure4.md  test_attention_extraction.md  testing.md
experiments/: run_extraction_figure4.py  run_extraction_highframe.py  run_extraction_streaming.py  run_extraction_streaming_distributed.py  script_extract_0_29.sh  script_extract_frames72_l0_l29.sh  test_attention_equivalence.py  test_flash.py
model/: ode_regression.py
notebooks/: extract_all_attention.ipynb  fft_test.ipynb  merge.ipynb  plot_pipline.ipynb  plt_fig4.ipynb  torch_fft.ipynb
notebooks/runs/: result_layer_0.ipynb  result_layer_1.ipynb  result_layer_10.ipynb  result_layer_11.ipynb  result_layer_12.ipynb  result_layer_13.ipynb  result_layer_14.ipynb  result_layer_15.ipynb  result_layer_16.ipynb  result_layer_17.ipynb  result_layer_18.ipynb  result_layer_19.ipynb  result_layer_2.ipynb  result_layer_20.ipynb  result_layer_21.ipynb  result_layer_22.ipynb  result_layer_23.ipynb  result_layer_24.ipynb  result_layer_25.ipynb  result_layer_26.ipynb  result_layer_27.ipynb  result_layer_28.ipynb  result_layer_29.ipynb  result_layer_3.ipynb  result_layer_4.ipynb  result_layer_5.ipynb  result_layer_6.ipynb  result_layer_7.ipynb  result_layer_8.ipynb  result_layer_9.ipynb
tests/: __init__.py  conftest.py  test_attention_extraction.py  test_extraction_logic.py  test_flash.py
trainer/: diffusion.py  distillation.py  gan.py  ode.py
wan/modules/: __init__.py  attention.py  attention_distributed.py  clip.py  model.py  t5.py  vae.py
