[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project]
name = "self-forcing-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "requests>=2.32.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"
priority = "supplemental"
