[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-forcing-fork"
version = "0.1.0"
description = "Self-Forcing: Autoregressive video diffusion with simulated inference during training"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.1.1",
    "av>=13.1.0",
    "black>=25.12.0",
    "certifi>=2025.11.12",
    "clip",
    "dashscope>=1.25.3",
    "diffusers>=0.31.0",
    "dominate>=2.9.1",
    "easydict>=1.13",
    "editables>=0.5",
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "ftfy>=6.3.1",
    "hatchling>=1.28.0",
    "huggingface-hub[cli]>=0.36.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "jupyterlab-code-formatter>=3.0.2",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.7",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "onnx>=1.20.0",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "open-clip-torch>=3.2.0",
    "opencv-python>=4.9.0.80",
    "opencv-python-headless>=4.12.0.88",
    "packaging>=25.0",
    "pathspec>=0.12.1",
    "pluggy>=1.6.0",
    "pycocotools>=2.0.10",
    "pycuda>=2025.1.2",
    "pydantic==2.10.6",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "starlette>=0.50.0",
    "tokenizers>=0.20.3",
    "torch>=2.4.0",
    "torchao>=0.14.1",
    "torchvision>=0.19.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "wandb>=0.23.1",
]

[tool.uv]
# 1. 限制只在 Linux x86_64 下解析，避免 ARM 架构报错
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

# 2. 定义 PyTorch 源，但标记为 explicit（显式），不让它自动干扰其他包
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# 3. 定义 Nvidia 源
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.ngc.nvidia.com"

# 4. 【关键】强制指定 torch 相关包走 pytorch 源
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.hatch.build.targets.wheel]
only-include = ["."]

